IberusParser.java
// Generated from Iberus.g4 by ANTLR 4.5.3
package com.iberus;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IberusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, Comment=2, LineComment=3, SubclassOfSymbol=4, FunctionTypeSymbol=5, 
		StaticSymbol=6, CreateSymbol=7, MyClassSymbol=8, ClassSymbol=9, ReturnSymbol=10, 
		IdFirstLargeAlpha=11, ContinueSymbol=12, SwitchSymbol=13, BreakSymbol=14, 
		TrueSymbol=15, FalseSymbol=16, WhileSymbol=17, ElseIfSymbol=18, ElseSymbol=19, 
		ForSymbol=20, IfSymbol=21, DoSymbol=22, IdFirstSmallAlpha=23, UnseenCharacter=24, 
		Text=25, Character=26, Real=27, IntegerTimesTenRaisedToThePowerOf=28, 
		TimesTenRaisedToThePowerOf=29, AssignmentSymbol=30, Dot=31, Comma=32, 
		LPar=33, RPar=34, LBrace=35, RBrace=36, LSquareBracket=37, RSquareBracket=38, 
		EndStatSymbol=39, EndClassSymbol=40;
	public static final int
		RULE_program = 0, RULE_someComment = 1, RULE_aClass = 2, RULE_entity = 3, 
		RULE_variableDeclaration = 4, RULE_variableDeclarationAssignment = 5, 
		RULE_assignment = 6, RULE_classSideEntity = 7, RULE_routine = 8, RULE_conditionThenSomeCode = 9, 
		RULE_condition = 10, RULE_someCode = 11, RULE_codeEntity = 12, RULE_codeEntityEndStatement = 13, 
		RULE_returnStatement = 14, RULE_expression = 15, RULE_parenthesizedExpression = 16, 
		RULE_function = 17, RULE_variableAssignment = 18, RULE_call = 19, RULE_classCall = 20, 
		RULE_instanceSideCall = 21, RULE_appl = 22, RULE_creation = 23, RULE_paramsRealCommaSeparated = 24, 
		RULE_typedThing = 25, RULE_codeBlock = 26, RULE_flowControl = 27, RULE_aSwitch = 28, 
		RULE_normalCase = 29, RULE_defaultCase = 30, RULE_doWhile = 31, RULE_aWhile = 32, 
		RULE_aIf = 33, RULE_elseIf = 34, RULE_aElse = 35, RULE_booleanExpression = 36, 
		RULE_paramsDecl = 37, RULE_notFirstParamDecl = 38, RULE_identifier = 39, 
		RULE_literal = 40, RULE_booleanLiteral = 41, RULE_array = 42;
	public static final String[] ruleNames = {
		"program", "someComment", "aClass", "entity", "variableDeclaration", "variableDeclarationAssignment", 
		"assignment", "classSideEntity", "routine", "conditionThenSomeCode", "condition", 
		"someCode", "codeEntity", "codeEntityEndStatement", "returnStatement", 
		"expression", "parenthesizedExpression", "function", "variableAssignment", 
		"call", "classCall", "instanceSideCall", "appl", "creation", "paramsRealCommaSeparated", 
		"typedThing", "codeBlock", "flowControl", "aSwitch", "normalCase", "defaultCase", 
		"doWhile", "aWhile", "aIf", "elseIf", "aElse", "booleanExpression", "paramsDecl", 
		"notFirstParamDecl", "identifier", "literal", "booleanLiteral", "array"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "':'", null, null, "'subclassOf'", "'Function'", "'static'", "'Create'", 
		"'myClass'", "'Class'", "'return'", null, "'continue'", "'switch'", "'break'", 
		"'true'", "'false'", "'while'", "'else if'", "'else'", "'for'", "'if'", 
		"'do'", null, null, null, null, null, null, null, "'<-'", "'.'", "','", 
		"'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "Comment", "LineComment", "SubclassOfSymbol", "FunctionTypeSymbol", 
		"StaticSymbol", "CreateSymbol", "MyClassSymbol", "ClassSymbol", "ReturnSymbol", 
		"IdFirstLargeAlpha", "ContinueSymbol", "SwitchSymbol", "BreakSymbol", 
		"TrueSymbol", "FalseSymbol", "WhileSymbol", "ElseIfSymbol", "ElseSymbol", 
		"ForSymbol", "IfSymbol", "DoSymbol", "IdFirstSmallAlpha", "UnseenCharacter", 
		"Text", "Character", "Real", "IntegerTimesTenRaisedToThePowerOf", "TimesTenRaisedToThePowerOf", 
		"AssignmentSymbol", "Dot", "Comma", "LPar", "RPar", "LBrace", "RBrace", 
		"LSquareBracket", "RSquareBracket", "EndStatSymbol", "EndClassSymbol"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Iberus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IberusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<SomeCommentContext> someComment() {
			return getRuleContexts(SomeCommentContext.class);
		}
		public SomeCommentContext someComment(int i) {
			return getRuleContext(SomeCommentContext.class,i);
		}
		public List<EntityContext> entity() {
			return getRuleContexts(EntityContext.class);
		}
		public EntityContext entity(int i) {
			return getRuleContext(EntityContext.class,i);
		}
		public List<AClassContext> aClass() {
			return getRuleContexts(AClassContext.class);
		}
		public AClassContext aClass(int i) {
			return getRuleContext(AClassContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Comment) | (1L << LineComment) | (1L << FunctionTypeSymbol) | (1L << ClassSymbol) | (1L << IdFirstLargeAlpha) | (1L << IdFirstSmallAlpha))) != 0)) {
				{
				setState(89);
				switch (_input.LA(1)) {
				case Comment:
				case LineComment:
					{
					setState(86);
					someComment();
					}
					break;
				case FunctionTypeSymbol:
				case IdFirstLargeAlpha:
				case IdFirstSmallAlpha:
					{
					setState(87);
					entity();
					}
					break;
				case ClassSymbol:
					{
					setState(88);
					aClass();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SomeCommentContext extends ParserRuleContext {
		public TerminalNode Comment() { return getToken(IberusParser.Comment, 0); }
		public TerminalNode LineComment() { return getToken(IberusParser.LineComment, 0); }
		public SomeCommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_someComment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).enterSomeComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).exitSomeComment(this);
		}
	}

	public final SomeCommentContext someComment() throws RecognitionException {
		SomeCommentContext _localctx = new SomeCommentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_someComment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_la = _input.LA(1);
			if ( !(_la==Comment || _la==LineComment) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AClassContext extends ParserRuleContext {
		public TerminalNode ClassSymbol() { return getToken(IberusParser.ClassSymbol, 0); }
		public List<TerminalNode> IdFirstLargeAlpha() { return getTokens(IberusParser.IdFirstLargeAlpha); }
		public TerminalNode IdFirstLargeAlpha(int i) {
			return getToken(IberusParser.IdFirstLargeAlpha, i);
		}
		public TerminalNode SubclassOfSymbol() { return getToken(IberusParser.SubclassOfSymbol, 0); }
		public TerminalNode EndClassSymbol() { return getToken(IberusParser.EndClassSymbol, 0); }
		public List<SomeCommentContext> someComment() {
			return getRuleContexts(SomeCommentContext.class);
		}
		public SomeCommentContext someComment(int i) {
			return getRuleContext(SomeCommentContext.class,i);
		}
		public List<ClassSideEntityContext> classSideEntity() {
			return getRuleContexts(ClassSideEntityContext.class);
		}
		public ClassSideEntityContext classSideEntity(int i) {
			return getRuleContext(ClassSideEntityContext.class,i);
		}
		public List<EntityContext> entity() {
			return getRuleContexts(EntityContext.class);
		}
		public EntityContext entity(int i) {
			return getRuleContext(EntityContext.class,i);
		}
		public AClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).enterAClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).exitAClass(this);
		}
	}

	public final AClassContext aClass() throws RecognitionException {
		AClassContext _localctx = new AClassContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_aClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(ClassSymbol);
			setState(97);
			match(IdFirstLargeAlpha);
			setState(98);
			match(SubclassOfSymbol);
			setState(99);
			match(IdFirstLargeAlpha);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Comment) | (1L << LineComment) | (1L << FunctionTypeSymbol) | (1L << StaticSymbol) | (1L << IdFirstLargeAlpha) | (1L << IdFirstSmallAlpha))) != 0)) {
				{
				setState(103);
				switch (_input.LA(1)) {
				case Comment:
				case LineComment:
					{
					setState(100);
					someComment();
					}
					break;
				case StaticSymbol:
					{
					setState(101);
					classSideEntity();
					}
					break;
				case FunctionTypeSymbol:
				case IdFirstLargeAlpha:
				case IdFirstSmallAlpha:
					{
					setState(102);
					entity();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			match(EndClassSymbol);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityContext extends ParserRuleContext {
		public RoutineContext routine() {
			return getRuleContext(RoutineContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public EntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).enterEntity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).exitEntity(this);
		}
	}

	public final EntityContext entity() throws RecognitionException {
		EntityContext _localctx = new EntityContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_entity);
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				routine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				variableDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public TerminalNode EndStatSymbol() { return getToken(IberusParser.EndStatSymbol, 0); }
		public VariableDeclarationAssignmentContext variableDeclarationAssignment() {
			return getRuleContext(VariableDeclarationAssignmentContext.class,0);
		}
		public TypedThingContext typedThing() {
			return getRuleContext(TypedThingContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).exitVariableDeclaration(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(114);
				variableDeclarationAssignment();
				}
				break;
			case 2:
				{
				setState(115);
				typedThing();
				}
				break;
			}
			setState(118);
			match(EndStatSymbol);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationAssignmentContext extends ParserRuleContext {
		public TypedThingContext typedThing() {
			return getRuleContext(TypedThingContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public VariableDeclarationAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarationAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).enterVariableDeclarationAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).exitVariableDeclarationAssignment(this);
		}
	}

	public final VariableDeclarationAssignmentContext variableDeclarationAssignment() throws RecognitionException {
		VariableDeclarationAssignmentContext _localctx = new VariableDeclarationAssignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclarationAssignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			typedThing();
			setState(121);
			assignment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode AssignmentSymbol() { return getToken(IberusParser.AssignmentSymbol, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(AssignmentSymbol);
			setState(124);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassSideEntityContext extends ParserRuleContext {
		public TerminalNode StaticSymbol() { return getToken(IberusParser.StaticSymbol, 0); }
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public ClassSideEntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classSideEntity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).enterClassSideEntity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).exitClassSideEntity(this);
		}
	}

	public final ClassSideEntityContext classSideEntity() throws RecognitionException {
		ClassSideEntityContext _localctx = new ClassSideEntityContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classSideEntity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(StaticSymbol);
			setState(127);
			entity();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RoutineContext extends ParserRuleContext {
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public TypedThingContext typedThing() {
			return getRuleContext(TypedThingContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ParamsDeclContext paramsDecl() {
			return getRuleContext(ParamsDeclContext.class,0);
		}
		public RoutineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_routine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).enterRoutine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).exitRoutine(this);
		}
	}

	public final RoutineContext routine() throws RecognitionException {
		RoutineContext _localctx = new RoutineContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_routine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(129);
				typedThing();
				}
				break;
			case 2:
				{
				setState(130);
				identifier();
				}
				break;
			}
			setState(134);
			_la = _input.LA(1);
			if (_la==LPar) {
				{
				setState(133);
				paramsDecl();
				}
			}

			setState(136);
			codeBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionThenSomeCodeContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public SomeCodeContext someCode() {
			return getRuleContext(SomeCodeContext.class,0);
		}
		public ConditionThenSomeCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionThenSomeCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).enterConditionThenSomeCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).exitConditionThenSomeCode(this);
		}
	}

	public final ConditionThenSomeCodeContext conditionThenSomeCode() throws RecognitionException {
		ConditionThenSomeCodeContext _localctx = new ConditionThenSomeCodeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_conditionThenSomeCode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			condition();
			setState(139);
			someCode();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public BooleanExpressionContext booleanExpression() {
			return getRuleContext(BooleanExpressionContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(LPar);
			setState(142);
			booleanExpression();
			setState(143);
			match(RPar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SomeCodeContext extends ParserRuleContext {
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public CodeEntityContext codeEntity() {
			return getRuleContext(CodeEntityContext.class,0);
		}
		public SomeCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_someCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).enterSomeCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).exitSomeCode(this);
		}
	}

	public final SomeCodeContext someCode() throws RecognitionException {
		SomeCodeContext _localctx = new SomeCodeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_someCode);
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				codeBlock();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				codeEntity();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeEntityContext extends ParserRuleContext {
		public SomeCommentContext someComment() {
			return getRuleContext(SomeCommentContext.class,0);
		}
		public FlowControlContext flowControl() {
			return getRuleContext(FlowControlContext.class,0);
		}
		public CodeEntityEndStatementContext codeEntityEndStatement() {
			return getRuleContext(CodeEntityEndStatementContext.class,0);
		}
		public CodeEntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeEntity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).enterCodeEntity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IberusListener ) ((IberusListener)listener).exitCodeEntity(this);
		}
	}
